# frames2osb

./: .gitignore  README.md  build.py  cli.py  helper.py  mp4osb.ipynb  osb.py  pixel_extract.py  pyproject.toml  setup.py
frames2osb/: __main__.py  cli.py  convert.py  helper.py  mp4osb.ipynb
frames2osb/pixels/: osb.py  pixel_extract.py  types.py
frames2osb/quadtree/: osb.py  pixel_extract.py  typings.py
pixels/: osb.py  pixel_extract.py  types.py
quadtree/: osb.py  pixel_extract.py  types.py
