[tool.poetry]
name = "frames2osb"
version = "0.1.0"
description = "Turns (video) frames to osu!storyboard"
authors = ["Rendy Arya Kemal <rendyarya22@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">3.8,<3.11"
Pillow = "^8.3.1"
numpy = "^1.21.2"
osbpy = "^3.0.1"
typed-argument-parser = {version = "^1.7.1", extras = ["cli"]}

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
