[tool.poetry]
name = "frames2osb"
version = "0.1.0"
description = "Turns (video) frames to osu!storyboard"
authors = ["Rendy Arya Kemal <rendyarya22@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = ">3.9,<3.11"
Pillow = "^10.0.0"
numpy = "^1.25.1"
typed-argument-parser = "^1.8.1"
ujson = "^5.8.0"

[tool.poetry.dev-dependencies]
mypy = "^1.4.1"
flake8 = "^6.0.0"
black = {version = "^23.3.0", allow-prereleases = true}
types-Pillow = "^10.0.0.0"

[tool.poetry.group.dev.dependencies]
types-ujson = "^5.8.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
